- 128kb chunk size - cleaning - docs